--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         <div class="section">
             <p>
-<b>About this Repo:</b><br/>
+<b>About this <a href="https://github.com/SamuelNarvaez/SWF" target="_blank">Repo</a>:</b><br/>
 Thesis Report: 
 <a href="https://zenodo.org/record/7116375#.YzMMSiXtbDs" target="_blank">https://zenodo.org/record/7116375#.YzMMSiXtbDs</a>
             </p>
@@ -218,7 +218,7 @@ In <code>trimesh.py</code>, you'll find a data structure for a triangular mesh, 
 </code></pre>
 
             <p>
-The important method of the <code>Trimesh</code> object is subdivision. After specifying a base mesh, we can subdivide it automatically using the loop subdivision scheme, or the user can manually specify the next subdivision mesh. Subdivision allows us to approximate the sphere (or hemisphere) with greater resolution – resulting in higher spatial resolution. Upon subdivision, a <code>Trimesh</code> builds the Decoding and Encoding filters <code>P, Q</code> and <code>A, B</code> which allow us to represent data defined over the mesh at different levels of detail. 
+The important method of the <code>Trimesh</code> object is subdivision. After specifying a base mesh, we can subdivide it automatically using the loop subdivision scheme, or the user can manually specify the next subdivision mesh. Subdivision allows us to approximate the sphere (or hemisphere) with greater resolution – resulting in higher spatial resolution. Upon subdivision, a <code>Trimesh</code> builds the Decoding and Encoding filters <code>P, Q</code> and <code>A, B</code> which allow us to represent data defined over the mesh at different resolutions. 
             </p>
 
             <p>
