link back to home

--- a/index.html
+++ b/index.html
@@ -278,6 +278,7 @@ Various helper functions and constants used across the library.
         <div class="footer">
             <p>
                 <em>Happy Spatializing!</em>
+                <a href="/">home</a>
             </p>
         </div>
     </div>
