--- a/index.html
+++ b/index.html
@@ -277,10 +277,8 @@ Various helper functions and constants used across the library.
 
         <!-- Footer -->
         <div class="footer">
-            <p>
-                <em>Happy Spatializing!</em>
-                <a href="/">home</a>
-            </p>
+            <p><em>Happy Spatializing!</em></p>
+            <p><a href="/">home</a></p>
         </div>
     </div>
 </body>
