--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ Thesis Report:
 <a href="https://zenodo.org/record/7116375#.YzMMSiXtbDs" target="_blank">https://zenodo.org/record/7116375#.YzMMSiXtbDs</a>
             </p>
             <p>
-As a part of my Masters' I participated in ongoing research on Spherical Wavelet Format (SWF), a spatial audio format invented by my advisors <b>Davide Scaini</b> and <b>Daniel Arteaga</b>, and described in:
+As a part of my Masters I participated in ongoing research on Spherical Wavelet Format (SWF), a spatial audio format invented by my advisors <b>Davide Scaini</b> and <b>Daniel Arteaga</b>, and described in:
 
 <blockquote>
 D. Scaini and D. Arteaga, “Wavelet-Based Spatial Audio Format” J. Audio Eng. Soc., vol. 68, no. 9, pp. 613–627, (2020 September.). 
