--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ Here, to generate <code>P, Q, A</code> and <code>B</code>, we start with a trivi
         <div class="section">
             <p>
 <b>swf.py</b><br/>
-If you didn't exactly understand why we need everything in <code>trimesh.py</code>, that's okay. At some point it's just details. In <code>swf.py</code> we attempt to abstract away a useful amount of detail. <code>swf.py</code> builds <code>SWF</code> objects, which is a representation of a complete SWF format. In an <code>SWF</code> object, we have:
+If you didn't exactly understand why we need everything in <code>trimesh.py</code>, that's okay. I hope that with working with the library, the details will clarify themselves. In <code>swf.py</code> we attempt to abstract away a useful amount of detail. <code>swf.py</code> builds <code>SWF</code> objects, which is a representation of a complete SWF format. In an <code>SWF</code> object, we have:
             </p>
             <ul>
                 <li>A sequence of Subdivision Meshes such that every vertex of a mesh is a subset of the next mesh in the sequence.</li>
