--- a/index.html
+++ b/index.html
@@ -130,14 +130,14 @@ First define a base triangular mesh that closely resembles your intended speaker
             <pre>from trimesh import Trimesh 
 import numpy as np
 
-vertices_octahedron = np.array([[1,0,0],
+vertices_octahedron = np.array([[1,0,0], # Cartesian coordinates
                                 [-1,0,0],
                                 [0,1,0],
                                 [0,-1,0],
                                 [0,0,1],
                                 [0,0,-1]])
 
-faces_octahedron = np.array([[1,2,4],
+faces_octahedron = np.array([[1,2,4], # Indices of vertices
                              [1,3,4],
                              [3,0,4],
                              [0,2,4],
